--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-scripts": "5.0.1",
     "react-hook-form": "^7.36.0",
     "web-vitals": "^2.1.4",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "joi": "^17.6.0",
+    "@hookform/resolvers": "^2.9.8"
+
   },
   "scripts": {
     "start": "react-scripts start",
