--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "react-hook-form": "^7.36.0",
     "web-vitals": "^2.1.4",
     "axios": "^0.27.2",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "redux": "^4.1.2",
+    "react-redux": "^7.2.6"
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.22"
   },
   "scripts": {
     "start": "react-scripts start",
