--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-hook-form": "^7.36.0",
     "web-vitals": "^2.1.4",
     "axios": "^0.27.2",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "history": "^5.3.0",
+    "joi": "^17.6.0",
+    "@hookform/resolvers": "^2.9.8"
   },
   "scripts": {
     "start": "react-scripts start",
