--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "web-vitals": "^2.1.4",
     "axios": "^0.27.2",
     "react-router-dom": "^6.4.1",
+    "@reduxjs/toolkit": "^1.8.6",
+    "react-redux": "^8.0.4"
 
   },
 
